# health_triage_system

./: README.md  compare_models.py  main.py  model_comparison_report.md  pyproject.toml  test.py
app/data/: hospitals.csv  label_encoder.joblib  triage_model.json
app/schemas/: triage.py
app/services/: nlp_engine.py  predictor.py  recommender.py
app/templates/: index.html
